--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2"
   }
 }
